# pproj2

./: CMakeLists.txt  README.md  imgui.ini
include/: config.h  framebuffer.h  gui.h  mb.h  ogl.h  shader.h
mpi_src/: main.cpp
shaders/: fbo_fragment.glsl  fbo_vertex.glsl  mb_vertex.glsl  mv_fragment.glsl
src/: config.cpp  export.cpp  framebuffer.cpp  gui.cpp  main.cpp  mb.cpp  ogl.cpp  shader.cpp
